fix: enhance dc__unset-pre class for better text wrapping

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5292,4 +5292,9 @@ textarea::placeholder {
     background: inherit;
     border: none;
     padding: inherit;
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
